--- a/elements.html
+++ b/elements.html
@@ -42,10 +42,11 @@
 				<div class="container-fluid">
 					<div class="row align-items-center">
 						<!-- Logo -->
-						<div class="col-xl-2 col-lg-2 col-md-1">
+						<div class="col-xl-2 col-lg-2 col-md-1 d-flex">
 							<div class="logo">
 								<!-- <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a> -->
-								<h3 data-animation="fadeInUp" data-delay=".6s" class="" style="animation-delay: 0.6s;">
+								<h3 id="name" data-animation="fadeInUp" data-delay=".6s" class=""
+									style="animation-delay: 0.6s;">
 									<a href="index.html" class="hover-link">Dileep Kushwaha</a>
 								</h3>
 							</div>
