--- a/portfolio.html
+++ b/portfolio.html
@@ -126,6 +126,28 @@
                                 <div class="services-caption">
                                     <div class="row">
 
+
+
+                                        <div class="col-lg-4 col-md-4 col-sm-4">
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                    <!-- Single Project -->
+                                                    <div class="single-services mb-30" style="position: relative;">
+                                                        <div class="image-container">
+                                                            <img src="assets/img/project/spred.png"
+                                                                style="border-radius: 10px;width: 100%;height: 100%;"
+                                                                style="border: 2px solid #000;" alt="Project Image">
+                                                            <a href="https://serped.net" class="view-button"
+                                                                target="_blank">
+                                                                View
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
                                         <div class="col-lg-4 col-md-4 col-sm-4">
                                             <div class="row">
                                                 <div class="col-lg-12">
