add new project

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                                         to large enterprises, creating custom web solutions that drive success.</P>
                                     <!-- Hero-btn -->
                                     <div class="hero__btn">
-                                        <a href="javascript:void(0)" class="btn hero-btn" data-animation="fadeInLeft"
-                                            data-delay=".8s" onclick="downloadCV()">Download CV</a>
+                                        <!-- <a href="javascript:void(0)" class="btn hero-btn" data-animation="fadeInLeft"
+                                            data-delay=".8s" onclick="downloadCV()">Download CV</a> -->
                                         <a href="javascript:void(0)" class="btn border-btn ml-15"
                                             data-animation="fadeInRight" data-delay="1.0s">Hire Me</a>
                                     </div>
