--- a/blog_details.html
+++ b/blog_details.html
@@ -27,9 +27,8 @@
    <div id="preloader-active">
       <div class="preloader d-flex align-items-center justify-content-center">
          <div class="preloader-inner position-relative">
-            <div class="preloader-circle"></div>
-            <div class="preloader-img pere-text">
-               <img src="assets/img/logo/loder.jpg" alt="">
+            <div class="preloader-text pere-text">
+               <span>DK</span>
             </div>
          </div>
       </div>
